# 24TEIL_project

./: .gitignore  add_noise.py  environment.yml  evaluate.py  main.py  main.sh  midi2ref.py  midiFluct.py  predict.sh  rename.py  req.txt  score.json  score.txt  synth.py  test.mid  test.py  utils.py
cpp/: CMakeLists.txt  main.cpp  test.mid
cpp/include/: CMakeLists.txt  midi.hpp
cpp/src/: CMakeLists.txt  midi.cpp
midi/: tmp.csv
midi/csv/: piano.csv  piano_transcribe.csv  shift_forward_5_0_0.csv  shift_forward_5_0_2.csv  shift_forward_5_1_0.csv  shift_forward_5_1_1.csv  shift_forward_5_1_10.csv  shift_forward_5_1_11.csv  shift_forward_5_1_12.csv  shift_forward_5_1_13.csv  shift_forward_5_1_14.csv  shift_forward_5_1_15.csv  shift_forward_5_1_16.csv  shift_forward_5_1_17.csv  shift_forward_5_1_19.csv  shift_forward_5_1_2.csv  shift_forward_5_1_20.csv  shift_forward_5_1_2050.csv  shift_forward_5_1_21.csv  shift_forward_5_1_23.csv  shift_forward_5_1_3.csv  shift_forward_5_1_4.csv  shift_forward_5_1_5.csv  shift_forward_5_1_6.csv  shift_forward_5_1_7.csv  shift_forward_5_1_8.csv  shift_forward_5_1_9.csv
midi/percentage/: piano_transcribe.mid  shift_backward_5_1_1422.mid  shift_backward_5_1_574.mid  shift_forward_5_0_0.mid  shift_forward_5_0_1.mid  shift_forward_5_0_2.mid  shift_forward_5_0_3.mid  shift_forward_5_1_0.mid  shift_forward_5_1_1.mid  shift_forward_5_1_10.mid  shift_forward_5_1_11.mid  shift_forward_5_1_12.mid  shift_forward_5_1_13.mid  shift_forward_5_1_14.mid  shift_forward_5_1_15.mid  shift_forward_5_1_16.mid  shift_forward_5_1_2.mid  (+14 more)
recipes/: piano.yaml
(+1 files in other folders)
